--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Hi, I'm Victoria! I'm brushing up on my coding skills.</h1>
+        <h1>Hi, I'm Victoria!</h1>
+        <h2>I'm brushing up on my coding skills.</h2>
     </body>
 </html>
