--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 
 <head>
     <title>Victoria H. Farr 🪩 UI/UX Designer</title>
-    <link rel="icon" href="images/flamingo-favicon.ico">
+    <link rel="icon" href="https://img.icons8.com/emoji/48/flamingo-emoji.png" alt="flamingo-emoji">
     <link rel="stylesheet" href="styles.css">
+ 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&display=swap|Work+Sans"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <h1>Hi, I'm Victoria!</h1>
-    <h2>I'm brushing up on my coding skills.</h2>
-    <h3>A sample subheading</h3>
+    <h1>Be the flamingo.</h1>
+    <h2>Hi, I'm Victoria.</h2>
+    <h3>You can reinvent yourself as many times as you need.</h3>
         <p><a href="https://pokemipsum.com/">Pokem ipsum</a> dolor sit amet Rhyperior Scizor Linoone Relicanth Rotom Poison. Charizard Whirlipede Hydro Pump Skorupi Poison Munna Sharpedo. Rock Carracosta Buneary Fraxure Shellos Gallade Bidoof. Duis aute irure dolor in reprehenderit in voluptate Larvitar Trubbish Blissey Volbeat Rhyperior Boldore. Cascade Badge the enemy Pokemon fainted Chansey Wingull Kabuto Farfetch'd Chikorita.</p>
 </body>
 
