Changed favicon to sparkles

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <title>Victoria H. Farr 🪩 UI/UX Designer</title>
-    <link rel="icon" href="https://img.icons8.com/emoji/48/flamingo-emoji.png" alt="flamingo-emoji">
+    <title>Be the flamingo.</title>
+    <link rel="icon" href="https://img.icons8.com/external-tal-revivo-tritone-tal-revivo/32/external-firework-sparkles-with-light-and-explosion-sound-new-tritone-tal-revivo.png" alt="external-firework-sparkles-with-light-and-explosion-sound-new-tritone-tal-revivo">
     <link rel="stylesheet" href="styles.css">
  
     <link rel="preconnect" href="https://fonts.googleapis.com">
