h4 text styling and h1 opacity property addition

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
 <body>
     <h1>Be the flamingo.</h1>
-    <h2>Hi, I'm Victoria.</h2>
+    <h2>Hi, I'm Victoria!</h2>
     <h3>You can reinvent yourself as many times as you need.</h3>
+    <h4>I'm a UI/UX designer based in balmy Virginia Beach, Virginia.</h4>
         <p><a href="https://pokemipsum.com/">Pokem ipsum</a> dolor sit amet Rhyperior Scizor Linoone Relicanth Rotom Poison. Charizard Whirlipede Hydro Pump Skorupi Poison Munna Sharpedo. Rock Carracosta Buneary Fraxure Shellos Gallade Bidoof. Duis aute irure dolor in reprehenderit in voluptate Larvitar Trubbish Blissey Volbeat Rhyperior Boldore. Cascade Badge the enemy Pokemon fainted Chansey Wingull Kabuto Farfetch'd Chikorita.</p>
 </body>
 
