Text styling and removed Silkscreen font styling

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
 <body>
     <h1>Be the flamingo.</h1>
-    <h2>Hi, I'm Victoria!</h2>
+    <img src="images/standout-woman.jpeg">
+    <h2>Hello, world!</h2>
     <h3>You can reinvent yourself as many times as you need.</h3>
     <h4>I'm a UI/UX designer based in balmy Virginia Beach, Virginia.</h4>
-        <p><a href="https://pokemipsum.com/">Pokem ipsum</a> dolor sit amet Rhyperior Scizor Linoone Relicanth Rotom Poison. Charizard Whirlipede Hydro Pump Skorupi Poison Munna Sharpedo. Rock Carracosta Buneary Fraxure Shellos Gallade Bidoof. Duis aute irure dolor in reprehenderit in voluptate Larvitar Trubbish Blissey Volbeat Rhyperior Boldore. Cascade Badge the enemy Pokemon fainted Chansey Wingull Kabuto Farfetch'd Chikorita.</p>
+        <p>I blend aesthetic intuition, research, and strategy to create beautiful digital assets for organizations, helping them communicate their value to the world.</p>
+        <p>Check out some of my <a href="#">recent work</a> below, take a minute to <a href="#">get to know me,</a> or <a href="#">reach out</a> about working on a new project!</p>
 </body>
 
 </html>
