--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1>Be the flamingo.</h1>
     <img src="images/standout-woman.jpeg">
-    <h2>Hello, world!</h2>
+    <h2>Scrimba course exercises + notes [2023]</h2>
     <h3>You can reinvent yourself as many times as you need.</h3>
     <h4>I'm a UI/UX designer based in balmy Virginia Beach, Virginia.</h4>
         <p>I blend aesthetic intuition, research, and strategy to create beautiful digital assets for organizations, helping them communicate their value to the world.</p>
