Removed placeholder text-added exercise links

--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
 <body>
     <h1>Be the flamingo.</h1>
     <img src="images/standout-woman.jpeg">
-    <h2>Scrimba course exercises + notes [2023]</h2>
-    <h3>You can reinvent yourself as many times as you need.</h3>
-    <h4>I'm a UI/UX designer based in balmy Virginia Beach, Virginia.</h4>
-        <p>I blend aesthetic intuition, research, and strategy to create beautiful digital assets for organizations, helping them communicate their value to the world.</p>
-        <p>Check out some of my <a href="#">recent work</a> below, take a minute to <a href="#">get to know me,</a> or <a href="#">reach out</a> about working on a new project!</p>
+    <h2>Scrimba <a href="#">exercises + notes [2023]</a></h2>
+    <h2>Skillcrush refresher <a href="#">projects</a></h2>
 </body>
 
 </html>
