Added header images to all pages

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
+    <img src="images/flamingo-floatie.png" width="50%">
     <h1>Be the flamingo.</h1>
-    <img src="images/standout-woman.jpeg">
-    <h2>Scrimba <a href="#">exercises + notes [2023]</a></h2>
-    <h2>Skillcrush refresher <a href="#">projects</a></h2>
+    <h2>Scrimba <a href="scrimba.html">exercises + notes [2023]</a></h2>
+    <h2>Skillcrush refresher <a href="skillcrush.html">projects [2023]</a></h2>
+    <p>Photo by <a href="https://www.pexels.com/photo/pink-flamingo-inflatable-ring-and-green-inflatable-ring-on-swimming-pool-565999/">Toni Cuenca</a></p>
 </body>
 
 </html>
