--- a/scrimba.html
+++ b/scrimba.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
+        <img src="images/shell.png" width="25%">
         <h1>Scrimba projects.</h1>
     </body>
 </html>
