--- a/skillcrush.html
+++ b/skillcrush.html
@@ -10,6 +10,7 @@
     </head>
     
     <body>
+        <img src="images/heart-balloons.png" width="50%">
         <h1>Skillcrush projects.</h1>
     </body>
 </html>
