--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Be the flamingo.</title>
+    <meta charset="UTF-8">
     <link rel="icon" href="https://img.icons8.com/external-tal-revivo-tritone-tal-revivo/32/external-firework-sparkles-with-light-and-explosion-sound-new-tritone-tal-revivo.png" alt="external-firework-sparkles-with-light-and-explosion-sound-new-tritone-tal-revivo">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +16,7 @@
     <h1>Be the flamingo.</h1>
     <h2>Scrimba <a href="scrimba.html">exercises + notes [2023]</a></h2>
     <h2>Skillcrush refresher <a href="skillcrush.html">projects [2023]</a></h2>
-    <p>Photo by <a href="https://www.pexels.com/photo/pink-flamingo-inflatable-ring-and-green-inflatable-ring-on-swimming-pool-565999/">Toni Cuenca</a></p>
+    <p>photo by <a href="https://www.pexels.com/photo/pink-flamingo-inflatable-ring-and-green-inflatable-ring-on-swimming-pool-565999/">Toni Cuenca</a></p>
 </body>
 
 </html>
