--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <h1>Be the flamingo.</h1>
     <h2>Scrimba <a href="scrimba.html">exercises + notes [2023]</a></h2>
     <h2>Skillcrush refresher <a href="skillcrush.html">projects [2023]</a></h2>
+    <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
+    <br>
     <p>🦩 photo by <a href="https://www.pexels.com/photo/pink-flamingo-inflatable-ring-and-green-inflatable-ring-on-swimming-pool-565999/">Toni Cuenca</a></p>
 </body>
 
