Added back links to subpages

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -12,5 +12,8 @@
     <body>
         <img src="images/heart-balloons.png" width="50%">
         <h1>freecodecamp responsive web dev projects.</h1>
+            <h2><a href="freecodecamp/catphotoapp.html">Cat Photo App</a></h2>
+            <br>
+            <h2>⬅ <a href="index.html">back</a></h2>
     </body>
 </html>
