--- a/skillcrush.html
+++ b/skillcrush.html
@@ -12,5 +12,7 @@
     <body>
         <img src="images/heart-balloons.png" width="50%">
         <h1>Skillcrush projects.</h1>
+        <br>
+        <h2>⬅ <a href="index.html">back</a></h2>
     </body>
 </html>
