--- a/scrimba.html
+++ b/scrimba.html
@@ -11,5 +11,7 @@
     <body>
         <img src="images/shell.png" width="25%">
         <h1>Scrimba projects.</h1>
+        <br>
+        <h2>⬅ <a href="index.html">back</a></h2>
     </body>
 </html>
