Added footer to each section

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -15,4 +15,8 @@
         <br>
         <h2>⬅ <a href="index.html">back</a></h2>
     </body>
+    <footer>
+        <p><a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
+        <p>photo by <a href="#"></a></p>
+    </footer>
 </html>
