--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <head>
     <title>Be the flamingo.</title>
     <meta charset="UTF-8">
-    <link rel="icon" href="https://img.icons8.com/external-tal-revivo-tritone-tal-revivo/32/external-firework-sparkles-with-light-and-explosion-sound-new-tritone-tal-revivo.png" alt="external-firework-sparkles-with-light-and-explosion-sound-new-tritone-tal-revivo">
+    <link rel="icon"
+        href="https://img.icons8.com/external-tal-revivo-tritone-tal-revivo/32/external-firework-sparkles-with-light-and-explosion-sound-new-tritone-tal-revivo.png"
+        alt="external-firework-sparkles-with-light-and-explosion-sound-new-tritone-tal-revivo">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&family=Silkscreen:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -18,7 +22,13 @@
     <h2>Skillcrush refresher <a href="skillcrush.html">projects [2023]</a></h2>
     <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
     <br>
-    <p>🦩 photo by <a href="https://www.pexels.com/photo/pink-flamingo-inflatable-ring-and-green-inflatable-ring-on-swimming-pool-565999/">Toni Cuenca</a></p>
 </body>
+
+<footer>
+    <p><a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
+    <p>🦩 photo by <a
+        href="https://www.pexels.com/photo/pink-flamingo-inflatable-ring-and-green-inflatable-ring-on-swimming-pool-565999/">Toni
+        Cuenca</a></p>
+</footer>
 
 </html>
