Added mail emoji to footer email link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </body>
 
 <footer>
-    <p><a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
+    <p>💌 <a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
     <p>🦩 photo by <a
         href="https://www.pexels.com/photo/pink-flamingo-inflatable-ring-and-green-inflatable-ring-on-swimming-pool-565999/">Toni
         Cuenca</a></p>
