--- a/scrimba.html
+++ b/scrimba.html
@@ -11,7 +11,7 @@
     <body>
         <img src="images/shell.png" width="25%">
         <h1>Scrimba projects.</h1>
-            <p><a href="/vhf-portfolio.html">VHF portfolio coding practice.</a></p>
+            <p><a href="vhf-portfolio.html">VHF portfolio coding practice.</a></p>
         <br>
         <h2>⬅ <a href="index.html">back</a></h2>
     </body>
