Switched h2 and h3 em sizes

--- a/vhf-portfolio.html
+++ b/vhf-portfolio.html
@@ -11,10 +11,12 @@
     
     <body>
         <h1>Ya portfolio.</h1>
-        <br>
-        <h2>⬅ <a href="index.html">back</a></h2>
+        <h2>Victoria H. Farr</h2>
+        <h3>UI Design Flamingo</h3>
+        
     </body>
     <footer>
+        <h2>⬅ <a href="index.html">back</a></h2>
         <p>💌 <a href="mailto:victoriahfarr@gmail.com">Victoria made this in 2023.</a></p>
         <p>photo by <a href="#"></a></p>
     </footer>
