Added header texts

--- a/vhf-portfolio.html
+++ b/vhf-portfolio.html
@@ -12,7 +12,7 @@
     <body>
         <h1>Ya portfolio.</h1>
         <h2>Victoria H. Farr</h2>
-        <h3>UI Design Flamingo</h3>
+        <h3>UI Design Flamingo + lover of nachos.</h3>
         
     </body>
     <footer>
