--- a/scrimba.html
+++ b/scrimba.html
@@ -11,8 +11,14 @@
     <body>
         <img src="images/shell.png" width="25%">
         <h1>Scrimba projects.</h1>
-            <p><a href="vhf-portfolio.html">VHF portfolio coding practice.</a></p>
+            <ul>
+                <li>
+                    <h3><a href="scrimba/build-a-personal-website.html">Build a Personal Website</a></h3>
+                </li>
+            </ul>
         <br>
+        <p><a href="vhf-portfolio.html">VHF portfolio coding practice.</a></p>
+
         <h2>⬅ <a href="index.html">back</a></h2>
     </body>
     <footer>
