Added unordered list and list items

--- a/scrimba.html
+++ b/scrimba.html
@@ -15,10 +15,11 @@
                 <li>
                     <h3><a href="scrimba/build-a-personal-website.html">Build a Personal Website</a></h3>
                 </li>
+                <li>
+                    <h4>💻 <a href="vhf-portfolio.html">VHF portfolio coding practice.</a></h4>
+                </li>
             </ul>
         <br>
-        <p><a href="vhf-portfolio.html">VHF portfolio coding practice.</a></p>
-
         <h2>⬅ <a href="index.html">back</a></h2>
     </body>
     <footer>
