--- a/scrimba/build-a-personal-site/index.html
+++ b/scrimba/build-a-personal-site/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-    <head>
+    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <link rel="stylesheet" href="styles.css" />
         <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Black+Ops+One&family=Creepster&family=La+Belle+Aurore&family=MedievalSharp&family=Orbitron&family=Rye&display=swap" rel="stylesheet">
         <script src="index.js"></script>
@@ -21,9 +21,8 @@
         <p>Let's connect on <a href="https://www.linkedin.com/in/victoriahfarr/">LinkedIn!</a></p>
     <form>
     <label for="email">Enter ya email:</label>
-    <input type="email" id="email" name="email" placeholder="Ya email">
+    <input type="email" id="email" name="email">
     </form>
     <button type="button">Let's do this!</button>
-    <a href="https://scrimba.com/learn/htmlandcss/build-a-personal-website">via Scrimba</a>
     </body>
 </html>
