Updated Personal Site project URL - 2nd edit

--- a/scrimba.html
+++ b/scrimba.html
@@ -13,7 +13,7 @@
         <h1>Scrimba projects.</h1>
             <ul>
                 <li>
-                    <h3><a href="scrimba/build-a-personal-site.html/index.html">Build a Personal Website</a></h3>
+                    <h3><a href="scrimba/build-a-personal-site/index.html">Build a Personal Website</a></h3>
                 </li>
                 <li>
                     <h4>💻 <a href="vhf-portfolio.html">VHF portfolio coding practice.</a></h4>
