--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -13,7 +13,8 @@
         <img src="images/heart-balloons.png" width="50%">
         <h1>freecodecamp responsive web dev projects.</h1>
             <h2><a href="freecodecamp/catphotoapp.html">Cat Photo App</a></h2>
-            <br>
+            <h2><a href="freecodecamp/survey-form.html">freeCodeCamp Survey Form</a></h2>
+            <hr>
             <h2>⬅ <a href="index.html">back</a></h2>
     </body>
     <footer>
