Added external style sheet link to head

--- a/freecodecamp/survey-form.html
+++ b/freecodecamp/survey-form.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>freeCodeCamp Survey Form</title>
+        <link rel="stylesheet" href="survey-form-styles.css">
     </head>
 
     <header>
