Added meta charset element

--- a/freecodecamp/survey-form.html
+++ b/freecodecamp/survey-form.html
@@ -3,6 +3,7 @@
     <head>
         <title>freeCodeCamp Survey Form</title>
         <link rel="stylesheet" href="survey-form-styles.css">
+        <meta charset="UTF-8">
     </head>
 
     <header>
