--- a/freecodecamp/survey-form.html
+++ b/freecodecamp/survey-form.html
@@ -4,6 +4,9 @@
         <title>freeCodeCamp Survey Form</title>
         <link rel="stylesheet" href="survey-form-styles.css">
         <meta charset="UTF-8">
+        <meta name="description" content="freeCodeCamp Survey Form">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>
 
     <header>
