Add FCC logo SVG and h1 h2 styling

--- a/freecodecamp/survey-form.html
+++ b/freecodecamp/survey-form.html
@@ -12,11 +12,13 @@
     </head>
 
     <header>
-
+        <img src="images/fcc_primary_large.svg">
+        <h1>Survey Form</h1>
+        <h2>Thank you for taking the time to help us improve the platform!</h2>
     </header>
 
     <body>
-
+        
     </body>
 
     <footer>
