Added form attribute

--- a/freecodecamp/survey-form.html
+++ b/freecodecamp/survey-form.html
@@ -13,12 +13,14 @@
 
     <header>
         <img src="images/fcc_primary_large.svg">
-        <h1>Survey Form</h1>
-        <h2>Thank you for taking the time to help us improve the platform!</h2>
+        <h1 id="title">Survey Form</h1>
+        <p id="description">Thank you for taking the time to help us improve the platform!</p>
     </header>
 
     <body>
-        
+        <form id="survey-form">
+
+        </form>
     </body>
 
     <footer>
