--- a/freecodecamp/survey-form.html
+++ b/freecodecamp/survey-form.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>freeCodeCamp Survey Form</title>
-        <link rel="stylesheet" href="survey-form-styles.css">
+        <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
         <meta name="description" content="freeCodeCamp Survey Form">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
