--- a/freecodecamp/survey-form.html
+++ b/freecodecamp/survey-form.html
@@ -18,17 +18,28 @@
     </header>
 
     <body>
-        <form id="survey-form">
+        <form id="survey-form" action="https://register-demo.freecodecamp.org">
             <fieldset>
                 <label for="name">Name <input id="name" name="name" type="text" required /></label>
                 <label for="email">Email <input id="email" name="email" type="text" required /></label>
                 <label for="age">Age (optional) <input id="age" name="age" type="number" /></label>
                 <label for="current-role">Which option best describes your current role?</label>
             </fieldset>
+            <fieldset>
+                <!--recommend <label></label> -->
+                <!--favorite feature <label></label> -->
+            </fieldset>
+            <fieldset>
+                <!--like to see improved <label></label> -->
+            </fieldset>
+            <fieldset>
+                <!--comments or suggestions <label></label> -->
+                <!--submit button placeholder <label></label> -->
+            </fieldset>
         </form>
     </body>
 
     <footer>
-        
+        <p>Made by Victoria in 2023</p>
     </footer>
 </html>
