Deleted fieldset info and labels

--- a/freecodecamp/survey form/index.html
+++ b/freecodecamp/survey form/index.html
@@ -19,27 +19,30 @@
 
     <body>
         <form id="survey-form" action="https://register-demo.freecodecamp.org">
+            <!-- form section 1-->
             <fieldset>
-                <label for="name">Name <input id="name" name="name" type="text" required /></label>
-                <label for="email">Email <input id="email" name="email" type="text" required /></label>
-                <label for="age">Age (optional) <input id="age" name="age" type="number" /></label>
-                <label for="current-role">Which option best describes your current role?</label>
+                <label></label>
+                <label></label>
+                <label></label>
+                <label></label>
             </fieldset>
+            <!-- form section 2-->
             <fieldset>
-                <!--recommend <label></label> -->
-                <!--favorite feature <label></label> -->
+                <label></label>
+                <label></label>
             </fieldset>
+            <!-- form section 3-->
             <fieldset>
-                <!--like to see improved <label></label> -->
+                <label></label>
             </fieldset>
+            <!-- form section 4-->
             <fieldset>
-                <!--comments or suggestions <label></label> -->
-                <!--submit button placeholder <label></label> -->
+                <label></label>
             </fieldset>
         </form>
     </body>
 
     <footer>
-        <p>Made by Victoria in 2023</p>
+        <p>Site credits placeholder text</p>
     </footer>
 </html>
