Added label info for fieldset 1

--- a/freecodecamp/survey form/index.html
+++ b/freecodecamp/survey form/index.html
@@ -21,10 +21,10 @@
         <form id="survey-form" action="https://register-demo.freecodecamp.org">
             <!-- form section 1-->
             <fieldset>
-                <label></label>
-                <label></label>
-                <label></label>
-                <label></label>
+                <label>Name</label>
+                <label>Email</label>
+                <label>Age (optional)</label>
+                <label>Which option best describes your current role?</label>
             </fieldset>
             <!-- form section 2-->
             <fieldset>
