Add fieldset 2 + 3 label text

--- a/freecodecamp/survey form/index.html
+++ b/freecodecamp/survey form/index.html
@@ -28,12 +28,12 @@
             </fieldset>
             <!-- form section 2-->
             <fieldset>
-                <label></label>
-                <label></label>
+                <label>Would you recommend freeCodeCamp to a friend?</label>
+                <label>What is your favorite feature of freeCodeCamp?</label>
             </fieldset>
             <!-- form section 3-->
             <fieldset>
-                <label></label>
+                <label>What would you like to see improved? (Check all that apply.)</label>
             </fieldset>
             <!-- form section 4-->
             <fieldset>
