Added fieldset 4 label text

--- a/freecodecamp/survey form/index.html
+++ b/freecodecamp/survey form/index.html
@@ -37,7 +37,7 @@
             </fieldset>
             <!-- form section 4-->
             <fieldset>
-                <label></label>
+                <label>Any comments or suggestions?</label>
             </fieldset>
         </form>
     </body>
