Add input elements to form

--- a/freecodecamp/survey form/index.html
+++ b/freecodecamp/survey form/index.html
@@ -21,23 +21,23 @@
         <form id="survey-form" action="https://register-demo.freecodecamp.org">
             <!-- form section 1-->
             <fieldset>
-                <label>Name</label>
-                <label>Email</label>
-                <label>Age (optional)</label>
-                <label>Which option best describes your current role?</label>
+                <label>Name <input></input></label>
+                <label>Email <input></input></label>
+                <label>Age (optional) <input></input></label>
+                <label>Which option best describes your current role? <input></input></label>
             </fieldset>
             <!-- form section 2-->
             <fieldset>
-                <label>Would you recommend freeCodeCamp to a friend?</label>
-                <label>What is your favorite feature of freeCodeCamp?</label>
+                <label>Would you recommend freeCodeCamp to a friend? <input></input></label>
+                <label>What is your favorite feature of freeCodeCamp? <input></input></label>
             </fieldset>
             <!-- form section 3-->
             <fieldset>
-                <label>What would you like to see improved? (Check all that apply.)</label>
+                <label>What would you like to see improved? (Check all that apply.) <input></input></label>
             </fieldset>
             <!-- form section 4-->
             <fieldset>
-                <label>Any comments or suggestions?</label>
+                <label>Any comments or suggestions? <input></input></label>
             </fieldset>
         </form>
     </body>
