Add form label for + input ids

--- a/freecodecamp/survey form/index.html
+++ b/freecodecamp/survey form/index.html
@@ -21,23 +21,23 @@
         <form id="survey-form" action="https://register-demo.freecodecamp.org">
             <!-- form section 1-->
             <fieldset>
-                <label>Name <input></input></label>
-                <label>Email <input></input></label>
-                <label>Age (optional) <input></input></label>
-                <label>Which option best describes your current role? <input></input></label>
+                <label for="name">Name <input id="name" /></label>
+                <label for="email">Email <input id="email" /></label>
+                <label for="age">Age (optional) <input id="age" /></label>
+                <label for="current-role">Which option best describes your current role? <input id="current-role" /></label>
             </fieldset>
             <!-- form section 2-->
             <fieldset>
-                <label>Would you recommend freeCodeCamp to a friend? <input></input></label>
-                <label>What is your favorite feature of freeCodeCamp? <input></input></label>
+                <label for="recommend">Would you recommend freeCodeCamp to a friend? <input id="recommend" /></label>
+                <label for="favorite-feature">What is your favorite feature of freeCodeCamp? <input id="favorite-feature" /></label>
             </fieldset>
             <!-- form section 3-->
             <fieldset>
-                <label>What would you like to see improved? (Check all that apply.) <input></input></label>
+                <label for="improve-checkboxes">What would you like to see improved? (Check all that apply.) <input id="improve-checkboxes" /></label>
             </fieldset>
             <!-- form section 4-->
             <fieldset>
-                <label>Any comments or suggestions? <input></input></label>
+                <label for="comments">Any comments or suggestions? <input id="comments" /></label>
             </fieldset>
         </form>
     </body>
@@ -46,3 +46,4 @@
         <p>Site credits placeholder text</p>
     </footer>
 </html>
+<!-- <label for="first-name">Enter Your First Name: <input id="first-name" /></label> -->
