--- a/freecodecamp/survey form/index.html
+++ b/freecodecamp/survey form/index.html
@@ -19,13 +19,18 @@
 
     <body>
         <form id="survey-form" action="https://register-demo.freecodecamp.org">
+
             <!-- form section 1-->
             <fieldset>
-                <label for="name">Name <input id="name" /></label>
-                <label for="email">Email <input id="email" /></label>
-                <label for="age">Age (optional) <input id="age" /></label>
+                <label for="name">Name <input id="name" type="text" name="name"/></label>
+
+                <label for="email">Email <input id="email" type="email" name="email"/></label>
+
+                <label for="age">Age (optional) <input id="age" type="number" name="age" max="120"/></label>
+
                 <label for="current-role">Which option best describes your current role? <input id="current-role" /></label>
             </fieldset>
+
             <!-- form section 2-->
             <fieldset>
                 <label for="recommend">Would you recommend freeCodeCamp to a friend? <input id="recommend" /></label>
@@ -38,6 +43,7 @@
             <!-- form section 4-->
             <fieldset>
                 <label for="comments">Any comments or suggestions? <input id="comments" /></label>
+                <label for="submit">Submit<input id="submit" type="submit" value="submit"/></label>
             </fieldset>
         </form>
     </body>
@@ -46,4 +52,3 @@
         <p>Site credits placeholder text</p>
     </footer>
 </html>
-<!-- <label for="first-name">Enter Your First Name: <input id="first-name" /></label> -->
