--- a/freecodecamp/survey form/index.html
+++ b/freecodecamp/survey form/index.html
@@ -22,23 +22,29 @@
 
             <!-- form section 1-->
             <fieldset>
-                <label for="name">Name <input id="name" type="text" name="name"/></label>
+                <label for="name">Name <input id="name" type="text" name="name" required /></label>
 
-                <label for="email">Email <input id="email" type="email" name="email"/></label>
+                <label for="email">Email <input id="email" type="email" name="email" required /></label>
 
                 <label for="age">Age (optional) <input id="age" type="number" name="age" max="120"/></label>
 
-                <label for="current-role">Which option best describes your current role? <input id="current-role" /></label>
+                <label for="current-role">Which option best describes your current role? <input id="current-role" required /></label>
             </fieldset>
 
             <!-- form section 2-->
             <fieldset>
                 <label for="recommend">Would you recommend freeCodeCamp to a friend? <input id="recommend" /></label>
+                <label><input type="radio" /> Yes!</label>
+                <label><input type="radio" /> Maybe...</label>
+                <label><input type="radio" /> No</label>
+
                 <label for="favorite-feature">What is your favorite feature of freeCodeCamp? <input id="favorite-feature" /></label>
             </fieldset>
             <!-- form section 3-->
             <fieldset>
                 <label for="improve-checkboxes">What would you like to see improved? (Check all that apply.) <input id="improve-checkboxes" /></label>
+                <label><input type="checkbox" /></label>
+
             </fieldset>
             <!-- form section 4-->
             <fieldset>
