p color change to blueviolet

--- a/freecodecamp/survey form/index.html
+++ b/freecodecamp/survey form/index.html
@@ -33,7 +33,7 @@
 
             <!-- form section 2-->
             <fieldset>
-                <label for="recommend">Would you recommend freeCodeCamp to a friend? <input id="recommend" /></label>
+                <p>Would you recommend freeCodeCamp to a friend?</p>
                 <label><input type="radio" /> Yes!</label>
                 <label><input type="radio" /> Maybe...</label>
                 <label><input type="radio" /> No</label>
