--- a/freecodecamp/survey form/index.html
+++ b/freecodecamp/survey form/index.html
@@ -26,7 +26,7 @@
 
                 <label for="email">Email <input id="email" type="email" name="email" required /></label>
 
-                <label for="age">Age (optional) <input id="age" type="number" name="age" max="120"/></label>
+                <label for="age">Age (optional) <input id="age" type="number" name="age" min="13" max="120"/></label>
 
                 <label for="current-role">Which option best describes your current role? <input id="current-role" required /></label>
             </fieldset>
@@ -34,9 +34,9 @@
             <!-- form section 2-->
             <fieldset>
                 <p>Would you recommend freeCodeCamp to a friend?</p>
-                <label><input type="radio" /> Yes!</label>
-                <label><input type="radio" /> Maybe...</label>
-                <label><input type="radio" /> No</label>
+                <label for="yes"><input id="yes" type="radio" name="recommend-answer" /> Yes!</label>
+                <label for="maybe"><input id="maybe" type="radio" name="recommend-answer" /> Maybe...</label>
+                <label for="no"><input id="no" type="radio" name="recommend-answer" /> No</label>
 
                 <label for="favorite-feature">What is your favorite feature of freeCodeCamp? <input id="favorite-feature" /></label>
             </fieldset>
