Add textarea for comments

--- a/freecodecamp/survey form/index.html
+++ b/freecodecamp/survey form/index.html
@@ -60,17 +60,23 @@
                 </label>
 
             </fieldset>
+            
             <!-- form section 3-->
             <fieldset>
                 <label for="improve-checkboxes">What would you like to see improved? (Check all that apply.) <input id="improve-checkboxes" /></label>
-                <label><input type="checkbox" /></label>
 
+                <label><input type="checkbox" /></label>
             </fieldset>
+
             <!-- form section 4-->
             <fieldset>
-                <label for="comments">Any comments or suggestions? <input id="comments" /></label>
+                <label for="comments">Any comments or suggestions? 
+                    <textarea id="comments" rows="3" cols="30"></textarea>
+                </label>
+
                 <label for="submit">Submit<input id="submit" type="submit" value="submit"/></label>
             </fieldset>
+
         </form>
     </body>
 
