--- a/freecodecamp/survey form/index.html
+++ b/freecodecamp/survey form/index.html
@@ -19,15 +19,11 @@
 
     <body>
         <form id="survey-form" action="https://register-demo.freecodecamp.org">
-
             <!-- form section 1-->
             <fieldset>
                 <label for="name">Name <input id="name" type="text" name="name" required /></label>
-
                 <label for="email">Email <input id="email" type="email" name="email" required /></label>
-
                 <label for="age">Age (optional) <input id="age" type="number" name="age" min="13" max="120"/></label>
-
                 <label>Which option best describes your current role?
                     <select>
                         <option value="">(Select one)</option>
@@ -37,8 +33,6 @@
                         <option value="4">Other</option>
                     </select>
                 </label>
-
-
             </fieldset>
 
             <!-- form section 2-->
@@ -63,18 +57,48 @@
             
             <!-- form section 3-->
             <fieldset>
-                <label for="improve-checkboxes">What would you like to see improved? (Check all that apply.) <input id="improve-checkboxes" /></label>
+                <input type="checkbox" id="improve1" name="improve1" value="Front-End projects"/>
+                <label for="improve1"> Front-end projects</label><br>
 
-                <label><input type="checkbox" /></label>
+                <input type="checkbox" id="improve2" name="improve2" value="Back-End projects"/>
+                <label for="improve2"> Back-End projects</label><br>
+
+                <input type="checkbox" id="improve3" name="improve3" value="Data visualization"/>
+                <label for="improve3"> Data visualization</label><br>
+
+                <input type="checkbox" id="improve4" name="improve4" value="Challenges"/>
+                <label for="improve4"> Challenges</label><br>
+
+                <input type="checkbox" id="improve5" name="improve5" value="Open-source community"/>
+                <label for="improve5"> Open-source community</label><br>
+
+                <input type="checkbox" id="improve6" name="improve6" value="Git help rooms"/>
+                <label for="improve6"> Open-source community</label><br>
+
+                <input type="checkbox" id="improve7" name="improve7" value="Videos & tutorials"/>
+                <label for="improve7"> Open-source community</label><br>
+
+                <input type="checkbox" id="improve8" name="improve8" value="IRL meetups"/>
+                <label for="improve8"> Open-source community</label><br>
+
+                <input type="checkbox" id="improve9" name="improve9" value="Wiki resources"/>
+                <label for="improve9"> Wiki resources</label><br>
+
+                <input type="checkbox" id="improve10" name="improve10" value="freeCodeCamp forums"/>
+                <label for="improve10"> freeCodeCamp forums</label><br>
+
+                <input type="checkbox" id="improve11" name="improve11" value="Additional courses"/>
+                <label for="improve11"> Additional courses</label><br>
+
             </fieldset>
 
             <!-- form section 4-->
             <fieldset>
                 <label for="comments">Any comments or suggestions? 
-                    <textarea id="comments" rows="3" cols="30"></textarea>
+                    <textarea id="comments" rows="3" cols="30" placeholder="Share your thoughts!"></textarea>
                 </label>
 
-                <label for="submit">Submit<input id="submit" type="submit" value="submit"/></label>
+                <label for="submit"><input id="submit" type="submit" value="Submit"/></label>
             </fieldset>
 
         </form>
