Added p for formset 3

--- a/freecodecamp/survey form/index.html
+++ b/freecodecamp/survey form/index.html
@@ -57,6 +57,8 @@
             
             <!-- form section 3-->
             <fieldset>
+                <p>What would you like to see improved? (Check all that apply)</p>
+
                 <input type="checkbox" id="improve1" name="improve1" value="Front-End projects"/>
                 <label for="improve1"> Front-end projects</label><br>
 
