changed name of age input label id to number

--- a/freecodecamp/survey form/index.html
+++ b/freecodecamp/survey form/index.html
@@ -23,7 +23,7 @@
             <fieldset>
                 <label for="name">Name </label><input id="name" type="text" name="name" required />
                 <label for="email">Email </label><input id="email" type="email" name="email" required />
-                <label for="age">Age (optional) </label><input id="age" type="number" name="age" min="13" max="120"/>
+                <label for="number">Age (optional) </label><input id="number" type="number" name="age" min="13" max="120"/>
                 <p>Which option best describes your current role?</p>
                 <label>
                     <select>
