updated survey form project URL

--- a/freecodecamp/survey-form/index.html
+++ b/freecodecamp/survey-form/index.html
@@ -21,8 +21,8 @@
         <form id="survey-form" action="https://register-demo.freecodecamp.org">
             <!-- form section 1-->
             <fieldset>
-                <label for="name-label">Name </label><input id="name-label" type="text" name="name" required />
-                <label for="email-label">Email </label><input id="email-label" type="email" name="email" required />
+                <label for="name">Name </label><input id="name" type="text" name="name" required />
+                <label for="email">Email </label><input id="email" type="email" name="email" required />
                 <label for="number">Age (optional) </label><input id="number" type="number" name="age" min="13" max="120"/>
                 <p>Which option best describes your current role?</p>
                 <label>
