--- a/freecodecamp/survey-form/index.html
+++ b/freecodecamp/survey-form/index.html
@@ -45,7 +45,7 @@
             <fieldset>
                 <p>Would you recommend freeCodeCamp to a friend?</p>
                 <label for="yes"><input id="yes" type="radio" name="recommend-answer" value="Yes"/> Yes</label>
-                <label for="maybe"><input id="maybe" type="radio" name="recommend-answer" /> Maybe...</label>
+                <label for="maybe"><input id="maybe" type="radio" name="recommend-answer" value="Maybe..."/> Maybe...</label>
                 <label for="no"><input id="no" type="radio" name="recommend-answer" /> No</label>
 
                 <label>What is your favorite feature of freeCodeCamp?
