--- a/freecodecamp/survey-form/index.html
+++ b/freecodecamp/survey-form/index.html
@@ -23,10 +23,11 @@
             <fieldset>
 
                 <label for="name-label" id="name-label">
-                <label for="name">Name </label><input id="name" type="text" name="name" required />
-                </label>
+                <label for="name">Name </label><input id="name" type="text" name="name" required /></label>
 
-                <label for="email">Email </label><input id="email" type="email" name="email" required />
+                <label for="email-label">
+                <label for="email">Email </label><input id="email" type="email" name="email" required /></label>
+
                 <label for="number">Age (optional) </label><input id="number" type="number" name="age" min="13" max="120"/>
 
                 <p>Which option best describes your current role?</p>
