--- a/freecodecamp/survey-form/index.html
+++ b/freecodecamp/survey-form/index.html
@@ -27,8 +27,9 @@
 
                 <label for="email-label">
                 <label for="email">Email </label><input id="email" type="email" name="email" required /></label>
-
-                <label for="number">Age (optional) </label><input id="number" type="number" name="age" min="13" max="120"/>
+                
+                <label for="number-label">
+                <label for="number">Age (optional) </label><input id="number" type="number" name="age" min="13" max="120"/></label>
 
                 <p>Which option best describes your current role?</p>
                 <label>
