--- a/freecodecamp/survey-form/index.html
+++ b/freecodecamp/survey-form/index.html
@@ -23,13 +23,13 @@
             <fieldset>
 
                 <label for="name-label" id="name-label">
-                <label for="name">Name </label><input id="name" type="text" name="name" required /></label>
+                <label for="name">Name </label><input id="name" type="text" name="name" required placeholder="Enter your name"/></label>
 
-                <label for="email-label">
-                <label for="email">Email </label><input id="email" type="email" name="email" required /></label>
+                <label for="email-label" id="email-label">
+                <label for="email">Email </label><input id="email" type="email" name="email" required placeholder="Enter your email"/></label>
                 
-                <label for="number-label">
-                <label for="number">Age (optional) </label><input id="number" type="number" name="age" min="13" max="120"/></label>
+                <label for="number-label" id="number-label">
+                <label for="number">Age (optional) </label><input id="number" type="number" name="age" min="13" max="120" placeholder="Age"/></label>
 
                 <p>Which option best describes your current role?</p>
                 <label>
