added HR styling

--- a/freecodecamp/survey-form/index.html
+++ b/freecodecamp/survey-form/index.html
@@ -14,7 +14,7 @@
     <header>
         <img src="https://design-style-guide.freecodecamp.org/downloads/fcc_primary_large.svg">
         <h1 id="title">Survey Form</h1>
-        <p id="description">Thank you for taking the time to help us improve the platform!</p>
+        <h2 id="description">Thank you for taking the time to help us improve the platform!</h2>
     </header>
 
     <body>
@@ -31,7 +31,8 @@
                 <label for="number-label" id="number-label">
                 <label for="number">Age (optional) </label><input id="number" type="number" name="age" min="13" max="120" placeholder="Age"/></label>
 
-                <fieldset>
+                <hr>
+
                 <p>Which option best describes your current role?</p>
                 <label>
                     <select id="dropdown">
@@ -42,7 +43,6 @@
                         <option value="4">Other</option>
                     </select>
                 </label>
-                </fieldset>
             </fieldset>
 
             <!-- form section 2-->
